Fixed horizontal scroll in msg box

--- a/@tr/src/app/tr-feature/message/message.component.scss
+++ b/@tr/src/app/tr-feature/message/message.component.scss
@@ -19,7 +19,7 @@ p{
 mc-brief-card{
   .icon{
     padding-top: 0.7rem;
-    margin-right: 1.8rem;
+    margin-right: 1rem;
 
     &::before{
       color: $theme !important;
