--- a/@tr/src/app/tr-feature/notification/notification.component.scss
+++ b/@tr/src/app/tr-feature/notification/notification.component.scss
@@ -18,7 +18,7 @@ p{
 mc-brief-card{
   .icon{
     padding-top: 0.3rem;
-    margin-right: 1.8rem;
+    margin-right: 1rem;
 
     &::before{
       color: $theme !important;
